[package]
name = "kuma_agent"
version = "1.0.0"
edition = "2021"
description = "Kuma Agent"
license-file = "LICENSE.txt"
readme = "README.md"
authors = ["Cameron Cross"]

[package.metadata.deb.systemd-units]
unit-scripts = "install"
unit-name = "kuma_agent"

[dependencies]
serde_json = "1.0.107"
reqwest = { version = "0.11.22", default-features = false, features = ["blocking", "json", "rustls-tls"] }
dirs = "5.0.1"
configparser = "3.0.2"
tempfile = "3.8.0"

[target.'cfg(linux)'.dependencies]
cargo-deb = "1.39.3"

[target.'cfg(macos)'.dependencies]

[target.'cfg(windows)'.dependencies]
cargo-wix = "0.3.3"

[dev-dependencies]
more-asserts = "0.3.1"