[package]
name = "kuma_agent"
version = "1.0.0"
edition = "2021"
description = "Kuma Agent"
license-file = "LICENSE.txt"
readme = "README.md"
authors = ["Cameron Cross"]

[package.metadata.deb.systemd-units]
unit-scripts = "install"
unit-name = "kuma_agent"

[dependencies]
serde_json = "1.0.107"
reqwest = { version = "0.11.22", default-features = false, features = ["json", "rustls-tls"] }
configparser = "3.0.2"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.11"
system_shutdown = "4.0.1"
actix-web = "4.6.0"

[target.'cfg(unix)'.dependencies]
#cargo-deb = "1.44.1"
ctrlc = "3.2.3"

[target.'cfg(windows)'.dependencies]
cargo-wix = "0.3.3"
winapi = { version = "0.3.9", features = ["securitybaseapi", "winuser"] }
windows-service = "0.6.0"

[dev-dependencies]
more-asserts = "0.3.1"
tempfile = "3.8.0"